# namhub-dcc

./: .gitignore  LICENSE  Readme.md  landscape_assay_schema_mapping.csv  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
analysis/: generate_landscape_assay_schema_mapping.py
docs/: index.md
docs/commands/: create-folders-from-recordset.md  create-landscape-task.md  sync-project-view.md
src/namhub_dcc/: auth.py  cli.py  landscape.py
src/namhub_dcc/commands/: __init__.py  create_folders_from_recordset.py  create_landscape_task.py  sync_project_view.py  update_materialized_view.py
