[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "namhub-dcc"
version = "0.1.0"
description = "Scripts to automate steps in NAMHub data coordination"
readme = "Readme.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "synapseclient>=4.11.0",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "build",
]

[project.urls]
Homepage = "https://github.com/sagebio-ada/namhub-dcc"
Documentation = "https://sagebio-ada.github.io/namhub-dcc/"

[project.scripts]
namhub-dcc = "namhub_dcc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
